style.css
@import url("https://fonts.googleapis.com/css?family=Lato:400,700&display=swap");

@font-face {
    font-family: "Helvetica Neue LT Std 55 Roman";
    src: url('font/HelveticaNeueLTStd55Roman.woff');
    font-style: normal;
    font-weight: normal;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Helvetica Neue LT Std 55 Roman", "Lato";
}

body {
    display: flex;
    min-height: 100vh;
    justify-content: center;
    align-items: center;
    background: #ecf0f3;
}

form {
    padding: 3rem 1.5rem;
    border-radius: 20px;
    box-shadow: 5px 5px 10px #cbced1,
                -5px -5px 10px #ffffff;
}

h1 {
    font-size: 1.5rem;
    letter-spacing: .5px;
    margin-bottom: .5rem;
}

p {
    font-size: .8rem;
}

h1, p {
    text-align: center;
}

a {    
    color: #1a73e8;
}

.names {
    width: 100%;
    margin-top: 2rem;
}

.fields {
    width: 100%;
    margin-bottom: 1.7rem;
    position: relative;
}

.fields svg {
    position: absolute;
    width: 18px;
    height: 18px;
    bottom: 12px;
    left: 15px;
}

.fields input {
    width: 100%;
    background: none;
    outline: none;
    border: none;
    padding: .9rem .5rem .8rem 2.5rem;
    font-size: .9rem;
    border-radius: 20px;
    box-shadow: inset 4px 4px 4px #cbced1,
                inset -4px -4px 4px #ffffff;
}

[type="checkbox"] {
    background: transparent;
    box-shadow: inset 2px 2px 2px #cbced1,
                inset -2px -2px 2px #ffffff;
}

input::placeholder, input::-webkit-input-placeholder, input::-webkit-input-placeholder {
    font-size: .8rem;
}

.policy {
    display: flex;
}

.policy input {
    align-self: center;
}

.policy label {
    margin-left: .5rem;
    font-size: .8rem;
}

.policy a {
    text-decoration: none;
}

button {
    display: flex;
    justify-content: center;
    align-items: center;
    background: #1a73e8;
    border: none;
    width: 100%;
    font-family: "Helvetica Neue LT Std 55 Roman", "Lato";
    font-size: 1rem;
    letter-spacing: .5px;
    padding: .8rem 0;
    margin: 1.8rem 0 1.2rem 0;
    border-radius: 25px;
    color: #ffffff;
    outline: none;
    cursor: pointer;
    box-shadow: 3px 3px 8px #b1b1b1,
                -3px -3px 8px #ffffff;
    transition: .5s;
}

button:hover {
    background: #2985ff;
}

button:active {
    box-shadow: none;
    background: #1a71e4;
    outline: none;
}

button:disabled {
    opacity: .5;
    background: #1a73e8;
    cursor: not-allowed;
}

.error-message {
    position: absolute;
    width: fit-content;
    left: 40px;
    bottom: -15px;
    font-size: .7rem;
    color: red;
    letter-spacing: .5px;
}

.loader {
    display: none;
    justify-content: center;
    align-items: center;
    margin-left: .2rem;
}

#bar1, #bar2, #bar3, #bar4, #bar5 {
    width: 3px;
    height: 3px;
    background: #ffffff;
    margin-left: .25rem;
    border-radius: 25%;
    animation: animateLoader .75s ease-in-out infinite;
    -webkit-animation: animateLoader .75s ease-in-out infinite;
    -moz-animation: animateLoader .75s ease-in-out infinite;
}

#bar2 {
    animation-delay: .15s;
    -webkit-animation-delay: .15s;
    -moz-animation-delay: .15s;
}

#bar3 {
    animation-delay: .3s;
    -webkit-animation-delay: .3s;
    -moz-animation-delay: .3s;
}

#bar4 {
    animation-delay: .45s;
    -webkit-animation-delay: .45s;
    -moz-animation-delay: .45s;
}

#bar5 {
    animation-delay: .6s;
    -webkit-animation-delay: .6s;
    -moz-animation-delay: .6s;
}


/* Utilities and Animations */

.red {
    stroke: red;
}

.blue {
    stroke: #1a73e8;
}

.m-top {
    margin-top: 2.5rem;
}

@-webkit-keyframes animateLoader {
    0% {
        height: 3px;
    }
    50% {
        height: 18px;
    }
    100% {
        height: 3px;
    }
}

@keyframes animateLoader {
    0% {
        height: 3px;
    }
    50% {
        height: 18px;
    }
    100% {
        height: 3px;
    }
}


/* Responsive Styling */

@media screen and (min-width:400px) {
    .names {
        display: flex;
        justify-content: space-between;
    }

    .names .fields {
        width: 47.5%;
    }
        
    .form-width {
        width: 350px;
    }
}

@media screen and (max-width:300px) {
    .a-left {
        text-align: left;
    }
}

@media screen and (max-width: 400px) {
    form {        
        width: 100%;
        padding: 2.5rem 1.5rem;
        border-radius: 0;
        box-shadow: none;
    }

    .fields svg {
        bottom: 13px;
        left: 15px;
    }

    .policy label {
        padding-top: .25rem;
    }
}

